refactor-Clean code static analysis verified